# newsletter-bot

./: .gitignore  README.md  api.py  docker-compose.yml  main.py  pyproject.toml
models/: db_models.py  newsletter_bot_json_article.py  source_model.py  topic_model.py
modules/: agents_service.py  cache_service.py  db_service.py  gnews_service.py  kafka_newsletter_producer.py  newsletter_storage.py  newsletter_utils.py  openai_service.py
modules/helpers/Linkedin/: linkedin_helper.py
newsletters/: Alunas_de_Bengaluru_viralizam_criticando_buracos_e.txt  Babar_Azam_Orienta_Jovens_Jogadores_do_Paquistão_p.txt  Clássico_Índia_x_Paquistão_no_T20_World_Cup_Ameaça.txt  Crítico_Australiano_Aaron_Finch_Aconselha_Excluir_.txt  Dicas_de_Especialistas_para_Fortalecer_Relacioname.txt  Esha_Singh_conquista_ouro_na_pistola_de_ar_feminin.txt  Estratégias_de_SEO_com_IA_para_o_sucesso_digital_e.txt  Future_World_Reabre_Loja_Principal_em_Nova_Delhi_c.txt  IFAD_e_Vanuatu_lançam_projeto_de_US$_11_milhões_pa.txt  Josh_Kerr_afirma_domínio_no_1500m_com_retorno_de_J.txt  Jovem_Astro_do_Críquete_Vaibhav_Suryavanshi_Enfren.txt  Primeira_Ministra_de_IA_na_Albânia_para_Combater_C.txt  Torcedores_Australianos_Enfrentam_Preços_Chocantes.txt  Uso_Inteligente_do_Saque_em_Cartão_de_Crédito_para.txt  Visita_da_Namorada_de_Hardik_Pandya_ao_Hotel_da_Se.txt  Zion_Clark_Conquista_Respeito_Global_Após_Luta_His.txt
utils/: llm_json_utils.py  to_txt.py
