[project]
name = "newletter-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Erickson Dias",email = "ericksonagust45@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "openai (>=1.102.0,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-google-genai (>=2.0.7,<3.0.0)",
    "confluent-kafka (>=2.11.1,<3.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.30.0,<1.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
